EF Core - ConnectionString & Adding the DbContext

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=DotNetRpg; Trusted_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
