EF Core - First Migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=DotNetRpg; Trusted_Connection=true;"
   },
   "Logging": {
