--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=DotNetRpg; Trusted_Connection=true;"
   },
+  "AppSettings": {
+    "Token": "my top secret key xxxxxx"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
